--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "cmdk": "^1.1.1",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
+    "ethers": "^6.8.0",
+    "framer-motion": "^10.16.4",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
@@ -59,6 +61,7 @@
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.9",
+    "wagmi": "^2.0.0",
     "zod": "^3.25.76"
   },
   "devDependencies": {
