--- a/package.json
+++ b/package.json
@@ -63,7 +63,9 @@
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.9",
     "wagmi": "^2.0.0",
-    "zod": "^3.25.76"
+    "zod": "^3.25.76",
+    "axios": "^1.6.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
@@ -82,6 +84,7 @@
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.38.0",
-    "vite": "^5.4.20"
+    "vite": "^5.4.20",
+    "@types/uuid": "^9.0.0"
   }
 }
