--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.38.0",
     "vite": "^5.4.20",
-    "@types/uuid": "^9.0.0"
+    "@types/uuid": "^9.0.0",
+    "terser": "^5.24.0"
   }
 }
