--- a/09-25/package.json
+++ b/09-25/package.json
@@ -19,9 +19,12 @@
     "monitor:production": "node scripts/monitor-production.js",
     "initialize:quests": "hardhat run scripts/initialize-quests.js",
     "deploy:contracts": "hardhat run scripts/deploy-contracts.js",
+    "deploy:enhanced": "hardhat run scripts/deploy-enhanced-contracts.js",
     "deploy:testnet": "hardhat run scripts/deploy-contracts.js --network fuji",
+    "deploy:enhanced:testnet": "hardhat run scripts/deploy-enhanced-contracts.js --network fuji",
     "verify:contracts": "hardhat run scripts/verify-deployment.js",
     "setup:full": "npm run deploy:contracts && npm run verify:contracts",
+    "setup:enhanced": "npm run deploy:enhanced && npm run verify:contracts",
     "setup": "npm install && cd frontend && npm install"
   },
   "keywords": [
