--- a/package.json
+++ b/package.json
@@ -65,7 +65,8 @@
     "wagmi": "^2.0.0",
     "zod": "^3.25.76",
     "axios": "^1.6.0",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "@supabase/supabase-js": "^2.39.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
